# tf2project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  image.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  style.sh  test.sh
artifacts/: .terraform.lock.hcl  main.tf  terraform-v1.2.7.tfplan.test  terraform-v1.2.7.tfstate.test  terraform-v1.2.9.tfplan.test  terraform-v1.2.9.tfstate.test  testdata.txt
artifacts/modules/earth/: main.tf
artifacts/modules/moon/: main.tf
docs/: README.md
src/tf2/: __init__.py  cli.py
src/tf2/executor/: __init__.py  executor.py  local.py
src/tf2/terraform/: object.py  terraform.py  util.py
tests/: conftest.py  test_test.py  tf2_test.py
tests/executor/: executor_test.py  local_test.py
tests/terraform/: __init__.py  loader_test.py  local_test.py  object_test.py  terraform_test.py  util_test.py
tf2/: __init__.py  cli.py  test.py  tf2.py
tf2/executor/: __init__.py  executor.py  local.py
tf2/terraform/: __init__.py  loader.py  local.py  object.py  terraform.py  util.py
