[metadata]
name = tf2project
version = attr: tf2.__version__
description = Terraform Test Framework
license = Apache License 2.0
url = https://github.com/tf2project/tf2project
author = Saeid Bostandoust
author_email = ssbostan@yahoo.com
long_description_content_type = text/markdown
project_urls =
    Documentation = https://tf2project.io
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Testing

[options]
packages = find:
package_dir = = src
include_package_data = False
zip_safe = True

[options.packages.find]
where = src
